# investmentTools

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  package_macos.sh  package_windows.ps1  run_gui.bat  run_gui.sh
assets/: app.qrc
assets/macos/: app-icon.icns
docs/: README.md
docs/codex/: PROJECT_CONTEXT.md
docs/design/: InvestInsight-ui-redesign-mockup.md  render_investinsight_ui_mockup.py  render_investinsight_ui_mockup_pages.py
docs/product/: InvestInsight-product-overview.md
docs/release/: PACKAGING.md
docs/superpowers/plans/: 2026-06-20-ui-refactor-phase0-plan.md  2026-06-21-event-impact-engine-phase1-5-plan.md  2026-06-21-ui-redesign-implementation-plan.md
docs/superpowers/specs/: 2026-06-20-event-impact-engine-design.md
docs/versions/: README.md
docs/versions/v1.0/: README.md
docs/versions/v1.0/release/: PACKAGING.md
docs/versions/v2.0/: README.md
docs/versions/v2.0/design/: render_investinsight_ui_mockup.py  render_investinsight_ui_mockup_pages.py  ui-workbench-redesign.md
docs/versions/v2.0/plans/: event-impact-engine-phase1-5-plan.md  ui-redesign-implementation-plan.md  ui-refactor-phase0-plan.md
docs/versions/v2.0/specs/: event-impact-engine-design.md
docs/versions/v2.1/: README.md
docs/versions/v2.1/plans/: event-impact-engine-completion-plan.md
docs/versions/v2.2/: README.md
docs/versions/v2.2/plans/: ui-content-readability-optimization-plan.md
docs/versions/v2.3/: README.md
docs/versions/v2.3/plans/: recommendation-lifecycle-plan.md
docs/versions/v2.4/: README.md
docs/versions/v2.4/design/: sector-detail-focused-layout.md
docs/versions/v2.4/plans/: sector-detail-focused-layout-implementation-plan.md  technical-entry-exit-and-multi-horizon-recommendation-plan.md  technical-entry-exit-implementation-plan.md
docs/versions/v2.5/: DESIGN.md  README.md
docs/versions/v2.5/design/: workbench-redesign.md
docs/versions/v2.5/plans/: ui-workbench-implementation-plan.md
src/: main.cpp
src/core/: AIAnalyzer.cpp  AIAnalyzer.h  AdviceEngine.cpp  AdviceEngine.h  BreadthAnalyzer.cpp  BreadthAnalyzer.h  DataCollector.cpp  DataCollector.h  EventExtractionEngine.cpp  EventExtractionEngine.h  EventRepository.cpp  EventRepository.h  EventRuleBook.cpp  EventRuleBook.h  ExplainabilityEngine.cpp  ExplainabilityEngine.h  FlowStructureAnalyzer.cpp  FlowStructureAnalyzer.h  HttpClient.cpp  HttpClient.h  ImpactAnalyzer.cpp  ImpactAnalyzer.h  ImpactGraphEngine.cpp  ImpactGraphEngine.h  InsightOrchestrator.cpp  InsightOrchestrator.h  MarketContext.cpp  MarketContext.h  MarketRegimeDetector.cpp  MarketRegimeDetector.h  OverheatDetector.cpp  OverheatDetector.h  PriceLevelAnalyzer.cpp  PriceLevelAnalyzer.h  RecommendationTracker.cpp  RecommendationTracker.h  ReportComposer.cpp  ReportComposer.h  RotationDetector.cpp  RotationDetector.h  (+14 more)
src/domain/: AnalysisResult.h  FundImpact.h  IndustrySignal.h  InvestmentAdvice.h  MacroEvent.h  RawInsight.h  RecommendationLifecycle.h
src/providers/: IDataProvider.h  MockMacroProvider.cpp  MockMacroProvider.h  RealFinanceNewsProvider.cpp  RealFinanceNewsProvider.h  RealLinkageProvider.cpp  RealLinkageProvider.h
src/ui/: AppTheme.cpp  AppTheme.h  MainWindow.cpp  MainWindow.h
src/ui/renderers/: ChartRenderer.cpp  ChartRenderer.h  DashboardRenderer.cpp  DashboardRenderer.h  EventRadarRenderer.cpp  EventRadarRenderer.h  IndexDetailRenderer.cpp  IndexDetailRenderer.h  SectorDetailRenderer.cpp  SectorDetailRenderer.h  SectorTableRenderer.cpp  SectorTableRenderer.h  StrategyRenderer.cpp  StrategyRenderer.h
summary/: advice.md  flow-and-formulas.html  index.html
tests/core/: AIAnalyzerSmoke.cpp  EventImpactSmoke.cpp  PriceLevelAnalyzerSmoke.cpp  RecommendationTrackerSmoke.cpp
tests/ui/: AppThemeSmoke.cpp  ChartRendererSmoke.cpp  DashboardRendererSmoke.cpp  EventRadarRendererSmoke.cpp  IndexDetailRendererSmoke.cpp  SectorDetailRendererSmoke.cpp  SectorTableRendererSmoke.cpp  StrategyRendererSmoke.cpp
tools/: generate_app_icons.py  verify_ui_smoke.ps1
